# local-ai-companion

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.example.json  config.json  config.ollama.example.json  config.runtime.example.json  go.mod  go.sum  local_ai_assistant_development_plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
cmd/local-ai-runtime/: main.go
docs/: agent_tool_calling.md  api_contracts.md  architecture.md  collaboration.md  decisions.md  development_automation.md  git_workflow.md  project_management.md  roadmap.md  unity_design.md  v0.2-integration.md  v0.5_progress.md  wbs.md  webhook-pipeline.md  worklog.md
docs/plans/: 2026-07-12-agent-loop-consolidation.md
internal/agent/: agent_test.go  audit.go  context.go  context_test.go  executor.go  loop.go  loop_test.go  memory_integration_test.go  ollama.go  ollama_tool_format_test.go  policy.go  runtime_context.go  runtime_context_test.go  tool.go
internal/api/: audio_chunk.go  audio_chunk_test.go  handler.go  handler_test.go  voice.go  websocket.go  (+2 more)
prompts/: ollama_response_format.md  ollama_system.md  response_format.md  system.md
scripts/: check.ps1  run-cli.ps1  run-server.ps1  run-stt-server.ps1  smoke-ollama.ps1  test-python.ps1
stt/: faster_whisper_server.py  start_stt_server.ps1
tests/: test_cli.py  test_config.py  test_conversation.py  test_history.py  test_log_writer.py  test_prompts.py  test_providers.py  test_recovery.py  test_schema.py  test_server.py  test_stt.py  test_stt_server.py  test_vad.py  test_vad_frame.py
(+57 files in other folders)
